# soerface.de

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CNAME  Pipfile  README.md  app.py  env.py  freeze.py  iconfonts.py  index.html  pyproject.toml  requirements.txt  settings.py  settings_default.py
.github/workflows/: deploy.yml
.run/: Flask.run.xml  freeze.run.xml
blog/: index.html
data/blog/articles/: 2019-12-29_building-a-blog-with-gh-actions.md  2020-02-01_post-production-with-ffmpeg.md  2025-01-16_uv_run
data/quiz/: code-review-2021.yaml  foobar-quiz-3000.yaml
data/talks/2023-02-13_wmks-sentry/: index.html
data/tools/stardew/: index.html  item_mapping.json
quiz/: index.html
quiz/data/: code-review-2021.json  foobar-quiz-3000.json
quiz/screen/: index.html
sections/: blog.py  quiz.py  talks.py  tools.py
sections/static/: quiz.css  quiz_common.js  quiz_controller.js  quiz_screen.js
sections/templates/blog/: index.html
sections/templates/quiz/: screen.html
src/: app.py  env.py  freeze.py
src/sections/: blog.py  quiz.py
src/sections/static/: quiz.css  quiz_common.js  quiz_controller.js  quiz_screen.js
src/static/css/: global.css  pygments.css
src/static/js/: copy-to-clipboard.js
src/templates/: base.html  footer.html  header.html  index.html
static/JetBrainsMono-1.0.2/: font.css
static/css/: dark.css  global.css
static/js/: copy-to-clipboard.js
talks/: index.html
templates/: article_template.md  base.html  example_article.md  favicons.html  footer.html  header.html  index.html  macros.html
templates/blog/: article_detail.html  index.html
templates/blog/includes/: new_article_form.html  (+3 more)
templates/quiz/: index.html  screen.html  templates.html
templates/talks/: index.html
templates/tools/: index.html
tests/: test_app.py
(+37 files in other folders)
