[tool.poetry]
name = "soerface-de"
version = "0.1.0"
description = ""
authors = ["Soeren Wegener"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2"
Frozen-Flask = "^0.18"
Markdown = "==3.2.2"
python-frontmatter = "^1.0.0"
pytest = "^7.2.1"
pygments = "^2.14.0"
flake8 = "^6.0.0"
flask-wtf = "^1.1.1"
python-slugify = "^7.0.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
