[project]
name = "soerface-de"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "flake8>=7.3.0",
    "flask>=3.1.2",
    "flask-wtf>=1.2.2",
    "frozen-flask>=1.0.2",
    "markdown>=3.9",
    "pre-commit>=4.3.0",
    "pygments>=2.19.2",
    "pytest>=8.4.2",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.4",
    "requests>=2.32.5",
]
